tdf#91015 - CSV dialog crasher.

Failed to initialize the VclPtr<VirtualDevice> with an instance.

Change-Id: I6df2cbc1176ad74e3d8b5249b579ba424810c701